--- a/appsettings.json
+++ b/appsettings.json
@@ -7,12 +7,19 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MINX_MONIKA;Initial Catalog=EduSyncDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=tcp:edusync-server-azure.database.windows.net,1433;Initial Catalog=EduSync-DB;Persist Security Info=False;User ID=edusyncadmin;Password=EduSync#1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "this_is_a_very_long_and_secure_key_12345",
     "Issuer": "EduSyncAPI",
     "Audience": "EduSyncClient",
     "ExpiresInMinutes": 60
+  },
+  "EventHub": {
+    "ConnectionString": "Endpoint=sb://edusync-quiz-namespace.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=9/9K6d2ioczq+E2SmlIUa+C2tP5XAe/im+AEhIopPKU=",
+    "HubName": "livequizhub"
   }
+
+
+
 }
